_sass/home.scss
.background-image.full-height{
  height:100vh;
  padding-top: 15%;
}


.social-icon {
  height: 60px;
  padding: 10px;
  margin-top: 1vh;
}

#socials {
  max-width: 100%;
}

#image-container > img {
  margin: 5px;
}

#about {
  margin-top: 5vh;
  margin-bottom: 5vh;
}

.btn {
  margin-bottom: 5px;
}
section > .container {
  padding-top: 2%;
  padding-bottom: 2%;
}

#top > .jumbotron > .btn {
  margin-top: 5vh;
}

#top > .background-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/rhul-founders.jpg);
}

#top > .lead {
  padding-bottom: 5%;
}


#future-events > .container {
  padding: 2%;
}

#future-events > .container .card  {
  margin: 10px;
  background-color: white;
}

section#frequently-asked-questions {

  background-color: #f48b22;
  box-shadow: 0 10px #d3791f;
  margin-bottom:5%;
  color: #FFFFFF;
}

.card > a {
position: absolute;
top: 0; left: 0;
height: 100%; width: 100%;
}

.card > lead {
  font-weight: lighter;
  font-size: 5;
}

